sumo/tests/sumo/errors/wauts/cross3ltl_error_missing_to_prog/errors.sumo
Error: Missing destination program for WAUT 'w1'.
Quitting (on error).
